[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.141", features = ["derive"] }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
thiserror = "1.0.32"